# edth-tytan

./: .gitignore  BringFilteredDataAndVideoFrameDataTogeth.py  CHANGES.md  CLAUDE.md  HYPERPARAMETER_SWEEP_GUIDE.md  ProcessPicture.py  ProcessPictureFreeze.py  ProcessRawData.py  QUICKSTART_NVIDIA_FLOW.md  README.md  README_NVIDIA_FLOW.md  README_evaluate.md  SUBMISSION.md  app.py  benchmark_results.json  eda.ipynb  main.py  process_roll_then_baseline.py  pyproject.toml
baseline/: .gitignore  README.md  inference.py  requirements.txt  test.py
baseline/model/: baseline.py
baseline/utils/: create_clip_from_frames.py  create_frames_from_clip.py  plots.py
config/: openvins_thermal_uav.yaml
docs/: PERFORMANCE.md
notebooks/: eda_labels.ipynb  eda_logs.ipynb  stabilize_flight1.ipynb
output/relevantWithEulerAndFiltAndYawFix/Flight1/: Flight1.csv
scripts/: README.md  check_nvidia_of_support.py  hyperparameter_sweep.py  inference_nvidia_flow.py  preprocess_test_split.py
src/: benchmark_performance.py  create_video_from_images.py  evaluate.py  inference.py  split_data.py
src/model/: README.md  README_fusion.md  __init__.py  base.py  baseline.py  fusion.py  imu_fixed.py  imu_fusion.py  nvidia_optical_flow.py
src/utils/: augmentations.py  datasets.py  match_logs_to_frames.py  torch_utils.py
